[package]
name = "shrtn"
version = "0.2.0"
authors = ["Jens Reidel <jens@troet.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.10", default-features = false }
actix-web = { version = "3", default-features = false }
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
rand =  "0.7"
redis = { version = "0.17", default-features = false, features = ["tokio-rt-core"] }

[profile.release]
lto = "thin"
