[package]
name = "shrtn"
version = "0.2.0"
authors = ["Jens Reidel <jens@troet.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.6", default-features = false }
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
rand =  "0.8"
bb8-redis = { version = "0.9", default-features = false }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
